force-app/main/default/objects/Prestation__c/Prestation__c.object-meta.xml
<CustomObject>
    <label>Prestation</label>
    <nameField>
        <label>Prestation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prestations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>