force-app/main/default/objects/Prestation__c/fields/Code_Prestation__c.field-meta.xml
<CustomField>
    <fullName>Code_Prestation__c</fullName>
    <label>Code Prestation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>