force-app/main/default/objects/Prestation__c/fields/percent__c.field-meta.xml
<CustomField>
    <fullName>percent__c</fullName>
    <label>percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>