force-app/main/default/objects/Prestation__c/fields/Voucher_Country__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher Country</label>
    <referenceTo>Voucher_Country__c</referenceTo>
    <relationshipLabel>Prestations</relationshipLabel>
    <relationshipName>Prestations</relationshipName>
    <type>Lookup</type>
</CustomField>